log/build_2024-06-20_01-36-55/SerialPkg/stderr.log
  File "/home/hotaka/R1_ros_ws/install/SerialPkg/lib/python3.10/site-packages/SerialPkg/serial_node.py", line 29
    self.tx_data[9:13] = serial.to_binary(56.0])
                                              ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '('

